--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -114,6 +114,10 @@ header .content {
   padding-top: 98px;
   text-align: center;
 }
+.center {
+  text-align: center;
+  margin-bottom: 15px;
+}
 header .content .logo {
   margin: auto;
   display: block;
@@ -148,7 +152,7 @@ header .navigation .right {
   background: url("../images/ribbon-right.png");
 }
 header .navigation .center {
-  width: 550px;
+  width: 410px;
   background: url("../images/ribbon.png");
   font: 700 12px museo-sans;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
