--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -24,7 +24,9 @@ html {
 }
 
 ul {
-  list-style: none;
+  padding-left: 60px;
+  margin-bottom: 20px;
+  font: normal 16px museo-sans;
 }
 
 ul#columnlist {
