--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -23,10 +23,14 @@ html {
   line-height: 1;
 }
 
-ul {
+.about ul {
   padding-left: 60px;
   margin-bottom: 20px;
   font: normal 16px museo-sans;
+}
+
+ul {
+  list-style: none;
 }
 
 ul#columnlist {
