--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -186,7 +186,7 @@ header .navigation .opener {
   display: none;
   width: 40px;
   height: 40px;
-  background: red;
+  background: none;
   background-image: url("../images/menu.gif");
   left: 0;
   position: absolute;
