--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -410,7 +410,7 @@ section .next-dates p {
   border: none;
   font-size: 18px;
   cursor: pointer;
-  top: -46px;
+  top: -43px;
   position: relative;
   margin-left: 292px;
   -webkit-appearance: none;
@@ -421,13 +421,13 @@ form.form {
   position: relative;
 }
 
-#talks strong {
+#candidates strong {
   font-weight: bold;
   color: #B03120;
   display: block;
 }
 
-#talks h2 {
+#candidates h2 {
   text-align: center;
   font-weight: bold;
 }
