--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -123,6 +123,46 @@ position: relative;
 -moz-box-shadow: 0 0 7px 0 black;
 box-shadow: 0 0 7px 0 black;
 }
+header #attention_seeker {
+  background-image: url('../images/attention_seeker_bg.png');
+  background-repeat: no-repeat;
+  width: 431px;
+  height: 467px;
+  position: absolute;
+  z-index: 1;
+  padding: 10px;
+  color: white;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: museo-sans;
+}
+header #attention_seeker p {
+  margin-bottom: 10px;
+}
+header #attention_seeker strong {
+  font-weight: 700;
+}
+header #attention_seeker h1 {
+  background: none;
+  padding-left: 0;
+  color: white;
+  text-transform: uppercase;
+  font-size: 38px;
+}
+header #attention_seeker a.call_to_action {
+  border-radius: 3px;
+  border: 2px white solid;
+  padding: 10px;
+  text-transform: uppercase;
+  display: block;
+  width: 120px;
+  text-align: center;
+  margin-top: 40px;
+  font-weight: 700;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
+}
 header .grid, header .content, header #particles_wrapper, header .blender {
   position: absolute;
   top: 0;
